--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     
     <div class="cursor"></div>
 
+    <nav class="navbar">
+        <div class="nav-brand">Nathan Michel</div>
+        <div class="nav-links">
+            <a href="about.html" class="nav-item">About</a>
+            <a href="https://twitter.com" target="_blank" class="nav-item">Twitter</a>
+            <a href="https://linkedin.com" target="_blank" class="nav-item">Linkedin</a>
+        </div>
+    </nav>
     <header class="hero">
         <h1 class="hero-title">My 2025 <span class="wrapped-text">Wrapped</span></h1>
         <p class="hero-subtitle">Une année en revue</p>
@@ -24,30 +32,14 @@
     </header>
 
     <main id="timeline-container">
-        <!-- JS will populate this -->
+        <!-- JS will populate this -->   
     </main>
 
     <footer class="footer">
-        <p>© 2025 - Nathan Michel</p>
+        <p>© 2026 - Nathan Michel</p>
     </footer>
 
-    <!-- Modal -->
-    <div class="modal-overlay" id="modal">
-        <div class="modal-content">
-            <button class="close-btn" aria-label="Fermer">&times;</button>
-            <div class="modal-media-container">
-                <img src="" alt="" class="modal-image" id="modal-img">
-                <div class="modal-video-wrapper" id="modal-video-wrapper" style="display: none;">
-                    <!-- Video iframe or tag will be injected here if needed -->
-                </div>
-            </div>
-            <div class="modal-text">
-                <span class="modal-date" id="modal-date"></span>
-                <h2 class="modal-title" id="modal-title"></h2>
-                <p class="modal-description" id="modal-desc"></p>
-            </div>
-        </div>
-    </div>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
