--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My 2025 Wrapped</title>
+    <meta name="description" content="Découvrez le récapitulatif de l'année 2025 de Nathan Michel : projets, événements marquants et statistiques.">
+    
+    <!-- OpenGraph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="My 2025 Wrapped - Nathan Michel">
+    <meta property="og:description" content="Une année en revue : projets, événements et statistiques de 2025.">
+    <meta property="og:image" content="assets/Capture d’écran 2026-01-01 à 02.45.18-Photoroom.png">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="My 2025 Wrapped - Nathan Michel">
+    <meta name="twitter:description" content="Une année en revue : projets, événements et statistiques de 2025.">
+    <meta name="twitter:image" content="assets/Capture d’écran 2026-01-01 à 02.45.18-Photoroom.png">
+
+    <link rel="icon" type="image/jpeg" href="assets/MacOSCalendar-Photoroom.jpg">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <meta name="description" content="Les grands moments marquants de mon année 2025.">
 </head>
 <body>
     
@@ -17,9 +32,10 @@
     <nav class="navbar">
         <div class="nav-brand">Nathan Michel</div>
         <div class="nav-links">
-            <a href="about.html" class="nav-item">About</a>
-            <a href="https://twitter.com" target="_blank" class="nav-item">Twitter</a>
-            <a href="https://linkedin.com" target="_blank" class="nav-item">Linkedin</a>
+            <a href="about.html" class="nav-item">À propos</a>
+            <a href="https://x.com/nayth_exe" target="_blank" class="nav-item">Twitter</a>
+            <a href="https://www.instagram.com/newnayth/?hl=fr" target="_blank" class="nav-item">Instagram</a>
+            <a href="https://www.linkedin.com/in/nathan-michel-nkombe-lasseni-474ab930a/" target="_blank" class="nav-item">Linkedin</a>
         </div>
     </nav>
     <header class="hero">
