--- a/about.html
+++ b/about.html
@@ -158,6 +158,7 @@
                     <a href="https://x.com/nayth_exe" target="_blank" class="about-link">Twitter</a>
                     <a href="https://www.instagram.com/newnayth/?hl=fr" target="_blank" class="about-link">Instagram</a>
                     <a href="https://www.linkedin.com/in/nathan-michel-nkombe-lasseni-474ab930a/" target="_blank" class="about-link">Linkedin</a>
+                    <a href="https://github.com/Squid-Nayth" target="_blank" class="about-link">Github</a>
                 </div>
             </div>
 
