--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <a href="https://x.com/nayth_exe" target="_blank" class="nav-item">Twitter</a>
             <a href="https://www.instagram.com/newnayth/?hl=fr" target="_blank" class="nav-item">Instagram</a>
             <a href="https://www.linkedin.com/in/nathan-michel-nkombe-lasseni-474ab930a/" target="_blank" class="nav-item">Linkedin</a>
+            <a href="https://github.com/Squid-Nayth" target="_blank" class="nav-item">Github</a>
         </div>
     </nav>
     <header class="hero">
